testCases/keywords/test9.uni
main(){

	busTwooo= 10011101b; //valid
	neigh = 11001b; //error 

}
neigh
